--- a/src/Common/css/_variables.scss
+++ b/src/Common/css/_variables.scss
@@ -1,4 +1,4 @@
-// Color Pallet
+// Color Palette
 $amaranth: #E13763; // Pinkish Red
 $water_blue: #0081C8; // Bluish Cyan
 $congress_blue: #00408E; // Cyan Blue
@@ -9,3 +9,26 @@ $dark_magenta: #8A0079; // Reddish Magenta
 $black: #000000;
 $gray: #c7c7c7;
 $white: #FFFFFF;
+
+// Misc Colros
+$neutral-lightest: #f5f5f5;
+$neutral-lighter: #ebebeb;
+$neutral-light: #e4e4e4;
+$neutral-mid: #cfcfcf;
+$neutral: #bcbcbc;
+$neutral-dark: #6a6a6a;
+$neutral-darker: #4a4a4a;
+$neutral-darkest: #323232;
+
+$link-color: #086274;
+$base-text: #212121;
+$main-background: #f2f2f2;
+$disabled-text: #bbbbbb;
+$amber: #f47b19;
+$black-semi-transparent: #00000080;
+
+// Font Styles
+$fontStyle_bitter: 'Bitter', serif;
+
+// Font Style Imports
+@import url('https://fonts.googleapis.com/css2?family=Bitter&display=swap');
